--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+/*@charset "UTF-8";
 
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,400i,700);
 @import url(https://fonts.googleapis.com/css?family=Niconne);
@@ -14610,4 +14610,4 @@ select,
       margin-bottom: 5px;
       border-bottom: 1px solid #ccc;
       padding-bottom: 5px;
-  }
+  }*/
